fixed alignment on hoverpizza on desktop

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -310,7 +310,7 @@ header {
     .header-background-image {
       .popupPizza {
         &:hover {
-          top: -10%;
+          top: -9%;
           scale: (1.12);
         }
       }
